--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,3 +34,21 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+  # code coverage
+  coverage:
+      runs-on: ubuntu-20.04    
+      
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v2
+          with:
+            fetch-depth: 0
+        - name: Generate code coverage
+          run: |
+            cargo install cargo-tarpaulin
+            cargo tarpaulin --verbose --workspace --timeout 120 --out Lcov
+        - name: Upload coverage to Coveralls
+          uses: coverallsapp/github-action@v1.1.2
+          with:
+            github-token: ${{ secrets.GITHUB_TOKEN }}
+            path-to-lcov: lcov.info
